# hedge_heading_to_master

./: CMakeLists.txt  README.md  package.xml
config/: beacon_positions_example.yaml
launch/: hedge_heading_to_master.launch  setup_marvelmind_api.launch  test_two_drones.launch  test_with_dummy.launch
msg/: DroneHeadingDistances.msg  DroneHeadingDistancesDebug.msg  FleetHeadingDistances.msg  FleetHeadingDistancesDebug.msg
scripts/: dummy_hedge_publisher.py  fleet_listener.py  hedge_heading_distances_node.py  setup_marvelmind_env.py
