<?xml version="1.0"?>
<package format="2">
  <name>hedge_heading_to_master</name>
  <version>0.0.1</version>
  <description>Heading (yaw) and pairwise distances for drones from Marvelmind hedge_pos_ang. Each drone knows its heading and distance to every other drone.</description>

  <maintainer email="ril@todo.todo">ril</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>marvelmind_nav</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>marvelmind_nav</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>marvelmind_nav</exec_depend>

  <export>
  </export>
</package>
